Surface synchronization: Pass original ScreenInfo to OOPIF/BrowserPlugin

In device emulation mode, the top level renderer devtools lies to Blink
about the size and scale factor by constructing an emulated ScreenInfo object.
Prior to this patch, we propagated that ScreenInfo down to OOPIFs and
BrowserPlugins. This caused double scaling of the compositor viewport size
in OOPIFs because the top level renderer had already scaled down the
surface embedded.

This CL instead plumbs down the original ScreenInfo which fixes the device
emulation problem.

Bug: 819903, 672962
Change-Id: Ie32c2798edcbe8738c463edf86d45c86f33d0d5b
Reviewed-on: https://chromium-review.googlesource.com/956554
Commit-Queue: Fady Samuel <fsamuel@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Reviewed-by: Lucas Gadani <lfg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542130}
Former-commit-id: a863f15cf84a128c419ba8e2b6d3da3b91499f55